--- a/src/App.css
+++ b/src/App.css
@@ -2,4 +2,5 @@
       display: flex;
       flex-direction: column;
       min-height: 100vh;
+      padding-top: 80px; /* Add padding to account for fixed header */
     }
