--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -40,7 +40,7 @@
       font-family: sans-serif;
     }
 
-    .tryClaudeButton {
+    .tryMurshedButton {
       margin-left: 20px;
       padding: 10px 20px;
       background-color: #222;
@@ -150,7 +150,7 @@
         margin: 8px 0;
       }
 
-      .tryClaudeButton {
+      .tryMurshedButton {
         display: none;
       }
     }
