--- a/src/components/HeroSection.module.css
+++ b/src/components/HeroSection.module.css
@@ -12,7 +12,7 @@
     }
 
     .heroTitle {
-      font-size: 3rem;
+      font-size: clamp(2.5rem, 3.9vw, 5.5rem);
       margin-bottom: 30px;
       line-height: 1.2;
     }
@@ -28,25 +28,28 @@
 
     .card {
       background-color: white;
-      padding: 20px;
-      border-radius: 10px;
-      width: 45%;
+      align-content: space-between;
+      border-radius: 24px;
+      display: grid;
+      justify-items: start;
+      padding: var(--gutter-x);
+      width: 100%;
     }
 
     .cardTitle {
-      font-size: 0.8rem;
-      margin-bottom: 10px;
-    }
-
-    .cardSubtitle {
-      font-size: 1.2rem;
-      margin-bottom: 10px;
+      display: inline-block;
+      font-size: 14px;
+      font-weight: 500;
+      letter-spacing: 1px;
+      margin-bottom: calc(var(--gutter-y)* .5);
+      text-transform: uppercase;
+      font-weight: 600;
     }
 
     .cardText {
-      font-size: 1rem;
-      margin-bottom: 20px;
+      margin-top: calc(var(--gutter-y)* .25);
     }
+
 
     .cardButton {
       padding: 10px 20px;
@@ -54,35 +57,33 @@
       background-color: transparent;
       cursor: pointer;
       font-size: 1rem;
+      margin-top: calc(var(--gutter-y)* .5);
+      width: 100%;
     }
 
     .cardButton:first-of-type {
       background-color: #222;
       color: white;
-      border: none;
-    }
-
-    .heroImage {
-      width: 30%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
     }
 
     @media (max-width: 768px) {
       .hero {
         flex-direction: column;
-        padding: 30px 20px;
+        padding-left: var(--gutter-cap);
+        padding-right: var(--gutter-cap);
       }
 
       .heroContent {
         max-width: 100%;
         margin-bottom: 30px;
         margin-right: 0; /* Remove margin on small screens */
+        padding-right: 0;
       }
 
       .heroTitle {
-        font-size: 2rem;
+        font-size: 1.72rem;
+        margin-bottom: 30px;
+        line-height: 1.2;
       }
 
       .cards {
@@ -97,4 +98,9 @@
         width: 60%;
         display: none;
       }
+  
     }
+    
+
+
+      
