--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,93 @@
+body, html {
+  color: #141413;
+  margin: 0;
+  width: 100%;
+}
+
 body {
-      margin: 0;
-      font-family: sans-serif;
-      -webkit-font-smoothing: antialiased;
-      -moz-osx-font-smoothing: grayscale;
+  font-family: var(--tiempos-text), serif;
+  font-feature-settings: "pnum" on, "lnum" on, "ss01" on, "case" on;
+  font-size: 16px;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-weight: 400;
+  letter-spacing: -.01em;
+  line-height: 125%;
+  text-rendering: optimizelegibility;
+  -webkit-text-size-adjust: 100%;
+}
+
+
+
+
+:root {
+      box-sizing: border-box;
+      scroll-behavior: smooth;
+      --vh: 100vh;
+      --max-width: 1600px;
+      --column-count: 2;
+      --gutter-cap: 32px;
+      --gutter-x: 32px;
+      --gutter-y: 32px;
+  }
+
+@media (min-width: 700px) {
+  :root {
+        --column-count: 12;
+        --gutter-cap: 64px;
+        --gutter-x: 32px;
+        --gutter-y: 32px;
     }
+}
+
+.h0, .h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
+  font-family: var(--styrene-a), sans-serif;
+  font-feature-settings: "pnum" on, "lnum" on, "liga" on;
+  font-weight: 600;
+  line-height: 1em;
+  margin-bottom: 0;
+  margin-top: 0;
+}
+
+
+.h4 {
+  font-size: clamp(1.25rem, 1.67vw, 1.5rem);
+  letter-spacing: -.0225em;
+  line-height: 125%;
+}
+
+.h2 {
+  display: block;
+  font-size: 1.5em;
+  margin-block-start: 0.83em;
+  margin-block-end: 0.83em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  font-weight: bold;
+  unicode-bidi: isolate;
+}
+
+
+button {
+  align-items: center;
+  border-radius: 12px;
+  display: inline-flex;
+  font-family: var(--styrene-b), sans-serif;
+  justify-content: center;
+  padding: 18px 32px;
+  text-decoration: none;
+  transition: background-color .2s cubic-bezier(.77,0,.175,1);
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
+p {
+  display: block;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  font-size: 1rem;
+  margin-bottom: 0;
+  unicode-bidi: isolate;
+}
