--- a/src/components/HeroSection.module.css
+++ b/src/components/HeroSection.module.css
@@ -21,19 +21,16 @@
       text-decoration: underline;
     }
 
-    .cards {
-      display: flex;
-      gap: 20px;
-    }
 
     .card {
       background-color: white;
-      align-content: space-between;
       border-radius: 24px;
-      display: grid;
-      justify-items: start;
+      display: flex;
+      flex-direction: column;
+      justify-items: center;
       padding: var(--gutter-x);
-      width: 100%;
+      width: 60%;
+      min-height:100px;
     }
 
     .cardTitle {
@@ -78,16 +75,13 @@
         margin-bottom: 30px;
         margin-right: 0; /* Remove margin on small screens */
         padding-right: 0;
+        
       }
 
       .heroTitle {
         font-size: 1.72rem;
         margin-bottom: 30px;
         line-height: 1.2;
-      }
-
-      .cards {
-        flex-direction: column;
       }
 
       .card {
